packages/taquito-michel-codec/test/contracts_012/ill_typed/stack_bottom_unfailwithable.tz
parameter unit;
storage unit;
code {
       DROP;
       FAILWITH;
     }